<resources>
    <string name="app_name">Gamers Paradise</string>
    <string name="login">login</string>
    <string name="create_profile">Create Profile</string>
    <string name="or">or</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="browse_games">Browse Games</string>
    <string name="search_games">Search Games</string>
    <string name="view_owned_games">View Owned Games</string>
    <string name="return_games">Return Games</string>
    <string name="manage_app">Manage App</string>
    <string name="logout">Logout?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="logout_w_o_question_mark">Logout</string>
    <string name="currentuser">currentUser</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in_below"><![CDATA[Already Have an account? Log In below!]]></string>
    <string name="to_login">To Login</string>
    <string name="manage_games">Manage Games</string>
    <string name="manage_users">Manage Users</string>
    <string name="search_for_a_game">Search for a Game!</string>
    <string name="purchase_game">Purchase Game</string>
    <string name="okay">OK</string>
    <string name="add_game">Add Game</string>
    <string name="delete_game">Delete Game</string>
    <string name="delete_user">Delete User</string>
    <string name="add_admin">Add Admin</string>
    <string name="add_user">Add User</string>
    <string name="enter_game_title">Game Title</string>
    <string name="enter_game_description">Game Description</string>
    <string name="enter_game_price">Game Price</string>
    <string name="enter_number_of_copies">Number of Copies</string>
    <string name="enter_game_information_below">Enter Game Information Below</string>
    <string name="games_to_return">Games To Return</string>
    <string name="add_user_to_db">Add User</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_user_credentials">Add User Credentials</string>
    <string name="add_admin_credentials">Add Admin Credentials</string>
    <string name="add_admin_to_db">Add Admin</string>
    <string name="create_a_new_profile">Create A New Profile!</string>
    <string name="welcome_to_gamer_s_paradise">Welcome to Gamer\'s Paradise!</string>
    <string name="landing_page_title">Welcome back gamer!</string>
    <string name="your_owned_games">Your Owned Games</string>
    <string name="you_are_in_view_owned_games">You are in view owned games</string>
</resources>