<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/manage_users_bg"
    tools:context=".adminActivities.ManageUsersActivity">

    <Button
        android:id="@+id/addUserButton"
        android:layout_width="185dp"
        android:layout_height="85dp"
        android:text="@string/add_user"
        android:textSize="20sp"
        android:backgroundTint="#8011A5D6"
        app:layout_constraintBottom_toTopOf="@+id/addAdminButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90" />

    <Button
        android:id="@+id/addAdminButton"
        android:layout_width="185dp"
        android:layout_height="85dp"
        android:text="@string/add_admin"
        android:textSize="20sp"
        android:backgroundTint="#8011A5D6"
        app:layout_constraintBottom_toTopOf="@+id/deleteUserButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90" />

    <Button
        android:id="@+id/deleteUserButton"
        android:layout_width="185dp"
        android:layout_height="85dp"
        android:text="@string/delete_user"
        android:textSize="20sp"
        android:backgroundTint="#8011A5D6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.60" />

</androidx.constraintlayout.widget.ConstraintLayout>