<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_app_main_bg"
    tools:context=".startupActivities.MainActivity">

    <TextView
        android:layout_width="321dp"
        android:layout_height="90dp"
        android:text="@string/welcome_to_gamer_s_paradise"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <Button
        android:id="@+id/buttonSendToLogin"
        android:layout_width="320dp"
        android:layout_height="85dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/semiTransparentGrey"
        android:text="@string/login"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <Button
        android:id="@+id/buttonSendToCreateProfile"
        android:layout_width="320dp"
        android:layout_height="85dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/semiTransparentGrey"
        android:text="@string/create_profile"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSendToLogin"
        app:layout_constraintVertical_bias="0.734" />

</androidx.constraintlayout.widget.ConstraintLayout>